# openfile-az

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
examples/: committee_config.sample.yaml  debts_template.xlsx  disbursements_template.xlsx  donors_template.xlsx
examples/samples/: README.md  sample_committee_config.yaml  sample_debts.xlsx  sample_disbursements.csv  sample_disbursements.xlsx  sample_donors.csv  sample_donors.xlsx  sample_donors_actblue.csv  sample_donors_givebutter.csv
openfile_az/: __init__.py  cli.py  column_mapper.py  pdf_filler.py  schedule_builder.py  signer.py  supplement.py  templates.py
openfile_az/data/: field_info.json
web/: README.md  SELF_HOSTING.md
web/docker/: Dockerfile  docker-compose.yml  nginx.conf
web/scripts/: build.py  generate_samples.py  serve.py
web/src/: app.js  index.html  styles.css  ui.js
